<resources>
    <string name="app_name">Charging Station Finder</string>
    <string name="student_id">1902317</string>
    <string name="searchTitle">Search Charging Stations</string>
    <string name="logout">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapTitle">Charging Stations</string>
    <string name="detailsTitle">Location Details</string>
    <string name="countryTv">Country</string>
    <string name="countryCodeTv">Country Code</string>
    <string name="distanceTv">Distance</string>
    <string name="locationTv">Location</string>
    <string name="latitudeTv">Latitude</string>
    <string name="longitudeTv">Longitude</string>
    <string name="clearTv">Clear</string>
    <string name="searchBtn">SEARCH</string>
    <string name="welcomeUserTv">Welcome</string>
    <string name="zero">0.0</string>
    <string name="gpsBtn">GPS Button</string>
    <string name="distanceTvHint">Distance (km) (Default = 10)</string>
    <string name="location_details">Location Details</string>
    <string name="address">Address</string>
    <string name="to_details">TO DETAILS</string>


    <string-array name="countries_array">
        <item>TR</item> <!-- turkey -->
        <item>CN</item> <!-- china -->
        <item>DE</item> <!-- germany -->
    </string-array>
</resources>